tests/integration/tests/snapshots/blokli_transaction_client__plain_transaction_no_safe_enrichment.snap
---
source: tests/integration/tests/blokli_transaction_client.rs
expression: res
---
id: "[uuid]"
status: CONFIRMED
submitted_at: "[timestamp]"
transaction_hash: "[tx_hash]"
safe_execution: ~
