tests/integration/tests/snapshots/blokli_transaction_client__safe_module_transaction_execution_failure.snap
---
source: tests/integration/tests/blokli_transaction_client.rs
expression: res
---
id: "[uuid]"
status: CONFIRMED
submitted_at: "[timestamp]"
transaction_hash: "[tx_hash]"
safe_execution:
  success: false
  safe_tx_hash: ~
  revert_reason: "[revert_data]"
